# dtp-primorye-analytics-public

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.app  Dockerfile.prophet  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-app.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  style.css
alembic/: env.py
alembic/versions/: 814aaf06d2cb_day17_task_runs_model_versions_snap_.py  b246f4a18315_full_schema_with_all_source_fields.py  b9a4f157c333_add_geography_gist_index_for_st_dwithin.py  bc06c4561065_add_telegram_age_enrichment_columns.py  d90353164694_expand_steering_confidence_varchar_to_20.py  e99ba6807a09_add_region_boundaries_table.py  ec580a6e805d_add_accidents_is_in_region_column.py
data/raw/: vehicle_brand_steering.csv
notebooks/: 06_age_analysis.ipynb
scripts/: build_brand_steering_reference.py  build_catboost_form_schema.py  build_hotspots_interpretation.py  build_hotspots_overview.py  build_osm_road_graph.py  capture_streamlit_screenshots.py  dbscan_sensitivity_analysis.py  enrich_db_with_telegram_ages.py  evaluate_topic_modeling.py  inspect_telegram_dtp_filter.py  load_region_boundary.py  run_dbscan_hotspots.py  run_ner_on_telegram_corpus.py  run_telegram_db_matching.py  run_topic_modeling.py  seed_model_versions.py  snap_existing_accidents.py  train_prophet_model.py  train_severity_classifier.py  tune_severity_classifier.py  update_accidents_is_in_region.py  visualize_forecast.py  visualize_hotspots.py  visualize_interpretation.py  visualize_region_boundary_check.py  visualize_severity_classifier.py  visualize_telegram_db_matching.py  visualize_telegram_ner.py  visualize_topic_modeling.py
src/analysis/: dbscan_clustering.py  recommendations.py  rhd_lhd_severity.py  rhd_lhd_visualize.py  snap_to_road.py  spot_profile.py  steering.py  telegram_age_enrichment.py  telegram_db_matcher.py
src/api/: dependencies.py  main.py  schemas.py
src/app/: __init__.py  main.py
src/database/: __init__.py  async_session.py  base.py  models.py  session.py
src/loaders/: __init__.py  dtp_stat_accumulated_downloader.py  dtp_stat_accumulated_loader.py  dtp_stat_accumulated_parser.py  telegram_export_loader.py
src/ml/: forecasting.py  severity_classifier.py
src/nlp/: dtp_ner.py  topic_modeling.py
src/tasks/: __init__.py  celery_app.py  (+7 more)
tests/: test_admin.py  test_api_smoke.py  test_recommendations.py
(+25 files in other folders)
